[package]
name = "rust_symcrypt_asn_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
der = { version = "0.7", features = ["alloc", "oid"] }
x509-parser = "0.16.0"
symcrypt = { path = "C:\\Users\\t-apierre\\OneDrive - Microsoft\\Desktop\\rust-symcrypt\\rust-symcrypt" }
rustls = "0.20"
picky-asn1-x509 = "0.13.0"
picky-asn1 = "0.9.0"
picky-asn1-der = "0.5.0"
serde = "1.0.208"
serde_bytes = "0.11.15"
serde_derive = "1.0.208"
ecdsa = { version = "0.16.9", features = ["der", "alloc"] }  # Ensure to include 'der' and 'alloc' for DER and dynamic allocation support
num-bigint = "0.4.6"
